// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`updateFilter should update filters 1`] = `
{
  "filters": [
    {
      "field": "y",
      "operator": "eq",
      "value": 2,
    },
    {
      "field": "z",
      "operator": "eq",
      "value": 2,
    },
    {
      "field": "b",
      "operator": "eq",
      "value": "xyz",
    },
  ],
  "logic": "and",
}
`;

exports[`updateFilter should update subFilters 1`] = `
{
  "filters": [
    {
      "field": "y",
      "operator": "eq",
      "value": 2,
    },
    {
      "field": "z",
      "operator": "eq",
      "value": 2,
    },
    {
      "filters": [
        {
          "field": "a",
          "operator": "eq",
          "value": 2,
        },
        {
          "field": "b",
          "operator": "eq",
          "value": 2,
        },
      ],
      "logic": "and",
    },
  ],
  "logic": "and",
}
`;
